--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,5 +25,5 @@ jobs:
 
       - name: Build and Push Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/hola-mundo-spring .
-          docker push ${{ secrets.DOCKER_USERNAME }}/hola-mundo-spring
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/holamundo .
+          docker push ${{ secrets.DOCKER_USERNAME }}/holamundo
