--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,6 +18,9 @@ jobs:
           java-version: "17"
           distribution: "temurin"
 
+      - name: Give Maven wrapper permission
+        run: chmod +x mvnw
+
       - name: Build with Maven
         run: ./mvnw clean package
 
